fixed the alignment
switch the "TAB" into "Enter" button

--- a/AI_Suggestion_App/frontend/src/components/SearchBar.css
+++ b/AI_Suggestion_App/frontend/src/components/SearchBar.css
@@ -3,22 +3,24 @@
     width: 100%;
     max-width: 800px;
     margin: 20px auto;
-    border: rgb(239, 238, 244);
+    border: 1px solid rgb(249, 249, 249);
 }
 
 .search-bar {
     width: 100%;
     padding: 15px;
     font-size: 16px;
-    border: solid #ccc;
+    border: 1px solid #ccc;
     border-radius: 10px;
-    box-shadow: 0px 2px 4px rgba(17, 1, 185, 0.1);
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
     /*conflict with ashali dev*/
     resize: none;
     overflow-y: hidden;
     min-height: 50px;
+
     line-height: 1.5;
     transition: height 0.2s ease;
+
     font-family: 'Arial';
 }
 
@@ -33,13 +35,16 @@
 
 .search-bar:focus {
     outline: none;
-    border-color: 1px solid #07684b;
-    box-shadow: 0px 0px 0px 3px rgba(16, 5, 237, 0.25);
+    border-color: #007bff;
+    box-shadow: 0px 0px 0px 3px rgba(0, 123, 255, 0.25);
 }
 
 .ghost-text-overlay{
-    margin:auto;
+    position: absolute;
     text-align: left;
+    color: #ccc;
     margin-top: 4px;
     margin-left: 2px;
+    pointer-events: none;
+    transition: top 0.2s, font-size 0.2s;
 }
